<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="fgzero">0 / 0 (0%)</string>
    <string name="other">other</string>
    <string name="closeouts">Closeouts</string>
    <string name="recovery">Recovery</string>
    <string name="post_d">Post D</string>
    <string name="man_d">Man D</string>
    <string name="fatigue">Fatigue</string>
    <string name="team_d">Team D</string>
    <string name="awareness">Awareness</string>
    <string name="ball_handling">ball handle</string>
    <string name="crossover">crossover</string>
    <string name="ball_control">ball control</string>
    <string name="scoring">scoring</string>
    <string name="rebounding">rebounding</string>
    <string name="finishing">finishing</string>
    <string name="court_vision">court vision</string>
    <string name="mid_range">mid range</string>
    <string name="long_range">long range</string>
    <string name="dunk_layup">dunks / layups</string>
    <string name="passing">passing</string>
    <string name="range">Range</string>
    <string name="best_defensive">Best Defensive</string>
    <string name="best_offensive">Best Offensive</string>
    <string name="assets">Assets</string>
    <string name="game_type">Game Type</string>
    <string name="style_of_play">Style of Play</string>
    <string name="highest_level_played">Highest Level Played</string>
    <string name="birthday">Birthday</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="bio">bio</string>
    <string name="skills">Skills</string>
    <string name="favs">favs</string>
    <string name="bball_profile">BBall Profile</string>
    <string name="archive">Archive</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="fgm">FGM</string>
    <string name="fga">FGA</string>
    <string name="threesm">3M</string>
    <string name="threesa">3A</string>
    <string name="ftm">FTM</string>
    <string name="fta">FTA</string>
    <string name="reb">REB</string>
    <string name="off">OFF</string>
    <string name="def">DEF</string>
    <string name="to">TO</string>
    <string name="swipe_here">swipe here</string>
    <string name="plus1">+1</string>
    <string name="minus1">-1</string>
    <string name="twos_made">2\'s made</string>
    <string name="twos_missed">2\'s miss</string>
    <string name="threes_made">3\'s made</string>
    <string name="threes_missed">3\'s miss</string>
    <string name="ft_made">ft made</string>
    <string name="ft_miss">ft miss</string>
    <string name="reboff">reb off</string>
    <string name="rebdef">reb def</string>
    <string name="archived_games_with_colon">Archived:</string>
    <string name="games_played_with_colon">Games Played:</string>
    <string name="active_games_with_colon">Active:</string>
    <string name="career">Career</string>
    <string name="rundown">RUndown</string>
    <string name="averages_n_totals">Averages &amp; Totals</string>
    <string name="totals_sign">&#8721;</string>
    <string name="shooting_made_n_percentage">Shooting</string>
    <string name="game_stats_low">game stats</string>
    <string name="manage_games">Manage Games</string>
    <string name="two_s">2\'s</string>
    <string name="three_s">3\'s</string>
    <string name="attempts">Attempts</string>
    <string name="percent_sign">%</string>
    <string name="win">Win</string>
    <string name="loss">Loss</string>
    <string name="tips">Tips</string>
    <string name="meta">Meta</string>
    <string name="scout">Scout</string>
    <string name="stats">Stats</string>
    <string name="first">first</string>
    <string name="prev">prev</string>
    <string name="next">next</string>
    <string name="last">last</string>
    <string name="by_gls">by: GameLifeStats.com</string>
    <string name="gls_site">http://www.gamelifestats.com</string>
    <string name="app_name">GLSElevate</string>
    <string name="brand_name">Elevate Your Game</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_gls__act__scout_edit">GLS_Act_ScoutEdit</string>
    <string name="your_scout">Your Scout</string>
    <string name="play_ball">Play Ball</string>
    <string name="statbook">Statbook</string>
    <string name="upload_game">upload game stats</string>
    <string name="name">Name</string>
    <string name="hometown">Hometown</string>
    <string name="position">Position</string>
    <string name="game_style">Game Style</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="wingspan">Wingspan</string>
    <string name="vertical_leap">Vertical Leap</string>
    <string name="shoesize">Shoe Size</string>
    <string name="nickname">Nickname</string>
    <string name="jersey">Jersey #</string>
    <string name="vertical">Vertical</string>
    <string name="active_status">Active Status</string>
    <string name="avg_totals">AVG/TOTALS</string>
    <string name="avg">AVG</string>
    <string name="game_by_game">GAME BY GAME</string>
    <string name="statline">full statline</string>

    <string-array name="positions_array">
        <item>Guard</item>
        <item>Point Guard</item>
        <item>Shooting Guard</item>
        <item>Off Guard</item>
        <item>Combo Guard</item>
        <item>Forward</item>
        <item>Small Forward</item>
        <item>Power Forward</item>
        <item>Point Forward</item>
        <item>Center</item>
    </string-array>
    <string-array name="playball_list">
        <item>upload game stats</item>
    </string-array>

    <string name="upload_gamestats">Upload a game</string>
    <string name="home_court">Home Court</string>
    <string name="gms">GMS</string>
    <string name="pts">PTS</string>
    <string name="rebs">REB</string>
    <string name="oreb">OREB</string>
    <string name="treb">TREB</string>
    <string name="ast">AST</string>
    <string name="stl">STL</string>
    <string name="blk">BLK</string>
    <string name="tos">TURN</string>
    <string name="min">MIN</string>
    <string name="fgma">FG(m-a)</string>
    <string name="fgp">FG%</string>
    <string name="ftp">FT%</string>
    <string name="fg3p">3G%</string>
    <string name="fls">FLs</string>
    <string name="games">Games</string>
    <string name="points">Points</string>
    <string name="rebounds">Rebounds</string>
    <string name="orebounds">Off. Rebs</string>
    <string name="drebounds">Def. Rebs</string>
    <string name="assists">Assists</string>
    <string name="steals">Steals</string>
    <string name="blocks">Blocks</string>
    <string name="turnovers">Turnovers</string>
    <string name="fouls">Fouls</string>
    <string name="minutes">Minutes</string>
    <string name="fgs">FGs</string>
    <string name="fg2s">2FGs</string>
    <string name="fg3s">3Gs</string>
    <string name="fts">FTs</string>
    <string name="pointers_2">2-Pointers</string>
    <string name="pointers_3">3-Pointers</string>
    <string name="free_throws">Free Throws</string>
    <string name="offensive">Offensive</string>
    <string name="defensive">Defensive</string>
    <string name="breakdown">Breakdown</string>
    <string name="made">Made</string>
    <string name="missed">Missed</string>
    <string name="save">Save</string>
    <string name="load">Load</string>
    <string name="double_zero">00</string>
    <string name="zero">0</string>
    <string name="title_activity_gls__act__play_ball__list">PlayBall_List</string>
    <string name="title_activity_gls__act__play_ball__game_stats_edit">GameStatsEdit</string>
    <string name="title_activity_statbook">Statbook</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="totals">Totals &#8721;</string>
    <string name="coming_soon">COMING SOON!!!</string>
    <string name="empty"></string>
    <string name="title_activity_scout">Scout</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="about">About</string>
    <string name="shooting">shooting</string>
    <string name="reset">Reset</string>
    <string name="gls_com">more @ GameLifeStats.com</string>
    <string name="title_activity_game_meta">GameMeta</string>
    <string name="title_activity_game_manager">GameManager</string>
    <string name="title_activity_play_dialog">PlayDialog</string>
    <string name="title_activity_bball_profile">BballProfile</string>
    <string name="fg2m">FG2M</string>
    <string name="fg3m">FG3M</string>
    <string name="fg3a">FG3A</string>
    <string name="fg2a">FG2A</string>
    <string name="shooting_summary">Shooting Summary</string>
    <string name="game_meta">Game Meta</string>
    <string name="qfullname">your name?</string>
    <string name="qnickname">nickname?</string>
    <string name="test_meta">Minutes: 40, Result: W, Opponent: Wildcats</string>
    <string name="add_meta">Add Meta</string>
    <string name="game_result">Game Result</string>
    <string name="use_game_upload">Use Game Upload</string>
    <string name="date">Date</string>
    <string name="attempted">Attempt</string>
    <string name="game_archive">Game Archive</string>
    <string name="title_activity_frag_avg_totals">FragAvgTotals</string>
    <string-array name="archive_array">
        <item>Live</item>
        <item>Archived</item>
        <item>Career</item>
    </string-array>
    <string name="filter_colon">Filter:</string>

</resources>
