<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.gamelifestats.glselevate"
    android:id="@+id/ScoutContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="15dp" >

        <LinearLayout
            android:id="@+id/sk_contain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offensive"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/scoring"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingScoring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/shooting"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingShooting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/mid_range"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingMidRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView06"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/long_range"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingLongRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/dunk_layup"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingDunksLayups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/ball_control"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingBallControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/ball_handling"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingBallHandle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/crossover"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingCrossover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/court_vision"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingCourtVision"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/passing"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingPassing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/awareness"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingOffensiveAwareness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/fatigue"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingOffensiveFatigue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/defensive"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/man_d"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingMan_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/team_d"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingTeam_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/post_d"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingPost_d"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/closeouts"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingCloseouts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/recovery"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingRecovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TextView09"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:text="@string/awareness"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/RatingDefensiveAwareness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/save_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/Orange"
        android:padding="5dp" >

        <Button
            android:id="@+id/save_skills"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:background="@android:drawable/btn_default"
            android:drawableLeft="@drawable/ic_menu_save"
            android:text="@string/save" />
    </FrameLayout>

</LinearLayout>