<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/centered"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".GLS_Act_main" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

    <TableRow
        android:id="@+id/sline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/gls_blue_opac"
        android:padding="10dp" >

        <TextView
            android:id="@+id/dis_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Orange"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/lab_gms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="15dp"
            android:text="@string/gms"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/WhiteSmoke" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/TableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/dis_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/lab_pts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pts"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/dis_rebounds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/lab_rebs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rebs"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/dis_assists"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/lab_asts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ast"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/dis_steals"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/lab_stls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stl"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/dis_blocks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/lab_blks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blk"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/dis_turnovers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/lab_tos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tos"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/dis_fouls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/lab_fls"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fls"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/dis_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:text="@string/zero"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/lab_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </TableRow>
        </HorizontalScrollView>
    </TableRow>

    <LinearLayout
        style="@style/bottom_buttons_bar" >

        <Button
            android:id="@+id/button_upload_game"
            android:text="@string/upload_gamestats"
            style="@style/bottom_buttons" />

        <include layout="@layout/button_divider" />

        <Button
            android:id="@+id/button_stats"
            android:text="@string/stats"
            style="@style/bottom_buttons" />
    </LinearLayout>

</LinearLayout>
